copy code to clipboard (final)

--- a/html/appointa/index.html
+++ b/html/appointa/index.html
@@ -351,7 +351,7 @@
   <div class="blankHXS"></div>
 
   <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--1of1 Grid--full forFullResponsiveGrid Grid--nested">
+    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--gutters Grid--nested">
       <div class="Grid-cell">
         <div class="element">
           <div class="Grid">
@@ -377,7 +377,7 @@
   <!-- Arrow -->
   <div class="blankHS"></div>
   <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--1of1 Grid--full forFullResponsiveGrid Grid--nested">
+    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--gutters Grid--nested">
       <div class="Grid-cell">
         <div class="element">
           <div class="Grid">
@@ -506,7 +506,7 @@
           </div>
           <!-- Arrow -->
           <div class="wrapper">
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element">
 
@@ -599,7 +599,7 @@
 
             </div>
 
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element">
@@ -681,7 +681,7 @@
           <!-- key pain points -->
 
           <div class="wrapper">
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element">
@@ -693,7 +693,7 @@
               </div>
             </div>
 
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element ">
                   <div class="element cardAPPOINTA">
@@ -710,7 +710,7 @@
               </div>
             </div>
 
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element ">
                   <div class="element cardAPPOINTA">
@@ -738,7 +738,7 @@
               </div>
             </div>
 
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element ">
                   <div class="element cardAPPOINTA">
@@ -753,7 +753,7 @@
               </div>
             </div>
 
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element ">
                   <div class="element cardAPPOINTA">
@@ -779,7 +779,7 @@
                 </div>
               </div>
             </div>
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element ">
                   <div class="element cardAPPOINTA">
@@ -792,7 +792,7 @@
                 </div>
               </div>
             </div>
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element ">
                   <div class="element cardAPPOINTA">
@@ -819,7 +819,7 @@
                 </div>
               </div>
             </div>
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element ">
                   <div class="element cardAPPOINTA">
@@ -835,7 +835,7 @@
                 </div>
               </div>
             </div>
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element ">
                   <div class="element cardAPPOINTA">
@@ -866,7 +866,7 @@
 
           <div class="blankHXS"></div>
           <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full forFullResponsiveGrid Grid--nested">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--gutters Grid--nested">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="Grid">
@@ -896,7 +896,7 @@
 
           <div class="blankHXS"></div>
           <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full forFullResponsiveGrid Grid--nested">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--gutters Grid--nested">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="Grid">
@@ -920,7 +920,7 @@
 
           <div class="blankHXS"></div>
           <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full forFullResponsiveGrid Grid--nested">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--gutters Grid--nested">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="Grid">
@@ -930,7 +930,7 @@
               </div>
             </div>
 
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element colorAPPOINTABg leftVerLine APPOINTA">
@@ -964,7 +964,7 @@
               </div>
 
             </div>
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element">
@@ -1044,7 +1044,7 @@
           <div class="blankHXS"></div>
 
           <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full forFullResponsiveGrid Grid--nested">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--gutters Grid--nested">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="Grid">
@@ -1076,7 +1076,7 @@
 
 
             <div class="wrapper">
-              <div class="Grid Grid--gutters Grid--1of1 Grid--full forFullResponsiveGrid Grid--nested">
+              <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--gutters Grid--nested">
                 <div class="Grid-cell">
                   <div class="element">
                     <div class="Grid">
@@ -1269,7 +1269,7 @@
           <div class="wrapper">
 
 
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element">
@@ -1279,7 +1279,7 @@
                 </div>
               </div>
             </div>
-            <div class="Grid Grid--full forFullResponsiveGrid ">
+            <div class="Grid Grid--full Grid--gutters ">
               <div class="Grid-cell">
                 <div class="element">
                   <p class="colorAPPOINTALt specialText">How Might We &#8230;</p>
@@ -1325,7 +1325,7 @@
           </div>
           <!-- Arrow -->
           <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full forFullResponsiveGrid Grid--nested">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--gutters Grid--nested">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="Grid">
@@ -1336,7 +1336,7 @@
               </div>
             </div>
             <div class="blankHS"></div>
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element">
@@ -1366,7 +1366,7 @@
           <div class="blankHXS"></div>
           <!-- uses cases -->
           <div class="wrapper">
-            <div class="Grid Grid--full forFullResponsiveGrid ">
+            <div class="Grid Grid--full Grid--gutters ">
               <div class="element ">
                 <div class="Grid-cell">
                   <div class="Grid Grid--gutters Grid--cols-3">
@@ -1438,7 +1438,7 @@
 
           <!-- user flow -->
           <div class="wrapper">
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element">
 
@@ -1452,7 +1452,7 @@
 
 
 
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element colorAPPOINTABgBlue leftVerLine APPOINTA">
@@ -1486,7 +1486,7 @@
           <!-- Sitemap -->
           <div class="wrapper">
 
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element">
                   <img class="shadowFilter modal-target" src="diagram_informationArchitecture_V1.svg" alt="Sitemap">
@@ -1511,7 +1511,7 @@
           <div class="wrapper">
 
             <!-- wireframes -->
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element">
                   <img class=" modal-target" src="userflow_Sketch.svg" alt="Pain points">
@@ -1520,7 +1520,7 @@
             </div>
             <!-- wireframes -->
             <div class="blankHS"></div>
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element">
@@ -1547,7 +1547,7 @@
           <!-- Arrow -->
           <div class="blankHS"></div>
           <div class="wrapper">
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element">
                   <h3 class="colorAPPOINTA">Invite team </h3>
@@ -1567,7 +1567,7 @@
             </div>
 
             <div class="blankHS"></div>
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element">
                   <h3 class="colorAPPOINTA">Join as team member</h3>
@@ -1586,7 +1586,7 @@
             </div>
 
             <div class="blankHS"></div>
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element">
                   <h3 class="colorAPPOINTA">Create interview </h3>
@@ -1607,7 +1607,7 @@
 
 
             <div class="blankHXS"></div>
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element">
                   <h3 class="colorAPPOINTA">Schedule interview </h3>
@@ -1632,7 +1632,7 @@
 
           <div class="wrapper">
 
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element colorAPPOINTABgBlue leftVerLine APPOINTA">
@@ -1665,7 +1665,7 @@
                 </div>
               </div>
             </div>
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element">
@@ -1702,7 +1702,7 @@
           <!-- Arrow -->
           <div class="blankHS"></div>
           <div class="wrapper">
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element">
                   <h3 class="colorAPPOINTA">Invite team </h3>
@@ -1726,7 +1726,7 @@
 
 
             <div class="blankHXS"></div>
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element">
                   <h3 class="colorAPPOINTA">Schedule interview </h3>
@@ -1753,7 +1753,7 @@
           <div class="wrapper">
 
 
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element colorAPPOINTABgBlue leftVerLine APPOINTA">
@@ -1781,7 +1781,7 @@
             <div class="blankHS"></div>
 
 
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element">
@@ -1861,7 +1861,7 @@
             <div class="blankHS"></div>
 
 
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <img class="iconM" src="ppl_recruiter.png" alt="Administration account">
                 <h3>Administration account</h3>
@@ -2070,7 +2070,7 @@
                 <div class="right-zone"></div>
               </div>
 
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element">
                     <div class="element">
@@ -2110,7 +2110,7 @@
         </div>
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid">
+          <div class="Grid Grid--full Grid--gutters">
 
             <div class="Grid-cell">
               <div class="element">
@@ -2160,7 +2160,7 @@
   </div>
   <!-- Arrow -->
   <div class="blankHM"></div>
-  <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+  <div class="Grid Grid--full Grid--gutters u-textCenter">
     <ul class="tags" id="TagsCloud">
 
       <li class="tag"><span class="box"> User-centered Design</span></li>
@@ -2212,7 +2212,7 @@
   </div>
   <!-- message -->
   <div class="blankHL"></div>
-  <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+  <div class="Grid Grid--full Grid--gutters u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
@@ -2356,7 +2356,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <div class="Grid Grid--full forFullResponsiveGrid">
+      <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
