--- a/html/architecture/LACAMA/index.html
+++ b/html/architecture/LACAMA/index.html
@@ -737,7 +737,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <div class="Grid Grid--full forFullResponsiveGrid">
+      <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
