--- a/html/architecture/index.html
+++ b/html/architecture/index.html
@@ -159,7 +159,7 @@
   <div class="wrapper">
     <div class="element">
 
-      <div class="forFullResponsiveGrid">
+      <div class="Grid--gutters">
         <div class="intro">
           <div class="t-hello">hi there! </div>
         </div>
@@ -193,7 +193,7 @@
         </div>
       </div>
 
-      <div class="Grid Grid--full forFullResponsiveGrid">
+      <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell Grey700">
           <h3>Throughout my three-year M.Arch program, I delved into design theories, methods, and practices, which are
             exemplified in the following projects. These projects placed great emphasis on the significant determinants
@@ -210,10 +210,9 @@
 
   <!-- Arrow -->
   <div class="blankHS"></div>
-
 <!-- Arrow -->
 <div class="wrapper">
-    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full Grid--gutters u-textCenter">
         <div class="Grid-cell">
             <div class="element">
                 <h2 class="tArrow">
@@ -235,7 +234,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./recreation_commons/">
           <div class="element">
-            <div class="elementCard float cardBorder shadowBoxLt">
+            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
               <img src="./all_sizes_recreation_commons.svg" alt="Appointa">
               <div class="elementInner">
                 <h5>Activity Center</h5>
@@ -257,7 +256,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class=" float cardBorder shadowBoxLt">
+          <div class=" float cardBorder borderRadiusS shadowBoxLt">
             <img src="./ar_06.png" alt="Kappe House">
             <div class="elementInner">
               <h5>Form finding exercise </h5>
@@ -291,7 +290,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./narrow_stripes/">
           <div class="element">
-            <div class="elementCard float cardBorder shadowBoxLt">
+            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_02.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Library and infrastructure</h5>
@@ -315,7 +314,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./recovery_of_river_edges/">
           <div class="element">
-            <div class="elementCard float cardBorder shadowBoxLt">
+            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_03.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Pavilion</h5>
@@ -347,7 +346,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./thesis_studio/">
           <div class="element">
-            <div class="elementCard float cardBorder shadowBoxLt">
+            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_07.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>On order: Differenciated</h5>
@@ -369,7 +368,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./the_rotation_of_curves/">
           <div class="element">
-            <div class="elementCard float cardBorder shadowBoxLt">
+            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_05.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Form finding exercise </h5>
@@ -400,7 +399,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./manifold_ground/">
           <div class="element">
-            <div class="elementCard float cardBorder shadowBoxLt">
+            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_04.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Urban public space</h5>
@@ -421,7 +420,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./LACAMA/">
           <div class="element">
-            <div class="elementCard float cardBorder shadowBoxLt">
+            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_08.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Musume extension</h5>
@@ -447,10 +446,9 @@
   <!-- Arrow -->
 
   <div class="blankHS"></div>
-
 <!-- Arrow -->
 <div class="wrapper">
-    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full Grid--gutters u-textCenter">
         <div class="Grid-cell">
             <div class="element">
                 <h2 class="tArrow">
@@ -469,7 +467,7 @@
 
   <div class="blankHM"></div>
 
-<div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+<div class="Grid Grid--full Grid--gutters u-textCenter">
     <ul class="tags" id="TagsCloud">
 
       <li class="tag"><span class="box"> User-centered Design</span></li>
@@ -523,7 +521,7 @@
 
 
   <!-- message -->
-  <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+  <div class="Grid Grid--full Grid--gutters u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
@@ -540,10 +538,9 @@
 
   <!-- Shared across the platform -->
   <div class="blankHS"></div>
-
 <!-- Arrow -->
 <div class="wrapper">
-    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full Grid--gutters u-textCenter">
         <div class="Grid-cell">
             <div class="element">
                 <h2 class="tArrow">
@@ -558,7 +555,7 @@
 
   <div class="blankHM"></div>
 
-<div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+<div class="Grid Grid--full Grid--gutters u-textCenter">
     <ul class="tags" id="TagsCloud">
 
       <li class="tag"><span class="box"> User-centered Design</span></li>
@@ -613,7 +610,7 @@
   <div class="blankHM"></div>
 
 <!-- message -->
-<div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+<div class="Grid Grid--full Grid--gutters u-textCenter">
   <div class="Grid-cell">
     <div data-aos="fade-up">
       
@@ -753,7 +750,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <div class="Grid Grid--full forFullResponsiveGrid">
+      <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
