--- a/html/architecture/thesis_studio/index.html
+++ b/html/architecture/thesis_studio/index.html
@@ -240,7 +240,7 @@
   <hr>
   <div class="blankHM"></div>
   <!-- Arrow -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> ABSTRACT<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -254,7 +254,7 @@
 
   <!--Abstract-->
 
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h2>Abstract</h2>
       <div class="blankHXS"></div>
@@ -295,7 +295,7 @@
 
   <div class="blankHM"></div>
   <!-- Arrow -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Operation Method<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -305,7 +305,7 @@
   </div>
   <!-- Arrow -->
   <!--Operation Method -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
 
       <img src="diagrams.jpg" alt="DIAGRAM">
@@ -338,7 +338,7 @@
 
 
   <!-- Arrow -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Case Study<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -349,7 +349,7 @@
   <!-- Arrow -->
   <div class="blankHM"></div>
   <!--CaseStudy1 -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4> CASE STUDY 1</h4>
       <div class="blankHXS"></div>
@@ -370,7 +370,7 @@
   <!--CaseStudy1 -->
   <div class="blankHM"></div>
   <!--CaseStudy2 -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4> CASE STUDY 2</h4>
       <div class="blankHXS"></div>
@@ -391,7 +391,7 @@
   <!--CaseStudy2 -->
   <div class="blankHM"></div>
   <!--CaseStudy3 -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4> CASE STUDY 3</h4>
       <div class="blankHXS"></div>
@@ -410,7 +410,7 @@
   <div class="blankHM"></div>
 
   <!--CaseStudy4 -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4> CASE STUDY 4</h4>
       <div class="blankHXS"></div>
@@ -430,7 +430,7 @@
 
 
   <!-- Arrow -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Results of Manipulations<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -442,7 +442,7 @@
   <div class="blankHM"></div>
 
   <!--manipulation -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <img src="compare.jpg" alt="DIAGRAM">
       <h4>RESULTS OF MANIPULATION</h4>
@@ -459,7 +459,7 @@
 
   
   <!-- Arrow -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Architecture Projects<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -470,7 +470,7 @@
   <!-- Arrow -->
   <div class="blankHM"></div>
   <!--project -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4>My Understanding of Architecture</h4>
       <div class="blankHXS"></div>
@@ -489,7 +489,7 @@
   <div class="blankHM"></div>
   <!--project -->
 
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4>My Understanding of Architecture</h4>
       <div class="blankHXS"></div>
@@ -515,7 +515,7 @@
   <div class="blankHM"></div>
 
   <!--video -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4> DIFFERENTIATED CONTINUITY </h4>
       <h5>Differentiated continuity apply on different scales
@@ -535,7 +535,7 @@
   <div class="blankHM"></div>
 
     <!-- Arrow -->
-    <div class="Grid Grid--full forFullResponsiveGrid">
+    <div class="Grid Grid--full Grid--gutters">
       <div class="Grid-cell">
         <div class="element">
           <h2 class="tArrow"> Drawings of multiple scales<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -547,7 +547,7 @@
   <div class="blankHM"></div>
 
   <!--drawing -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4> DRAWING </h4>
       <h5>Large-Scale </h5>
@@ -561,7 +561,7 @@
   <!--drawing -->
   <div class="blankHXL"></div>
   <!--drawing -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4> DRAWING </h4>
       <h5>Mid-Scale </h5>
@@ -576,7 +576,7 @@
 
   <div class="blankHXL"></div>
   <!--drawing -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4> DRAWING </h4>
       <h5>Large-Scale </h5>
@@ -588,7 +588,7 @@
   <!--drawing -->
   <div class="blankHL"></div>
   <!--drawing -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4> DRAWING </h4>
       <h5>Mid-Scale </h5>
@@ -600,7 +600,7 @@
   <!--drawing -->
   <div class="blankHL"></div>
   <!--drawing -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4> DRAWING </h4>
       <h5>Mid-Scale </h5>
@@ -612,7 +612,7 @@
   <!--drawing -->
   <div class="blankHL"></div>
   <!--drawing -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4> DRAWING </h4>
       <h5>Small-Scale </h5>
@@ -628,7 +628,7 @@
   <hr>
   <div class="blankHM"></div>
     <!-- Arrow -->
-    <div class="Grid Grid--full forFullResponsiveGrid">
+    <div class="Grid Grid--full Grid--gutters">
       <div class="Grid-cell">
         <div class="element">
           <h2 class="tArrow"> Photo Documentation<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -641,7 +641,7 @@
   <div class="blankHM"></div>
 
   <!--photos -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4> PHOTOS </h4>
       <h5>Circulation</h5>
@@ -654,7 +654,7 @@
 
 
   <!--photos -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4> PHOTOS </h4>
       <h5> Structure</h5>
@@ -666,7 +666,7 @@
   <div class="blankHL"></div>
 
   <!--photos -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4> PHOTOS </h4>
       <h5> Surface</h5>
@@ -680,7 +680,7 @@
   <!--photos -->
 
   <!--photos -->
-  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
+  <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
       <h4> PHOTOS </h4>
       <h5> Perspective</h5>
@@ -696,7 +696,7 @@
   <div class="blankHL"></div>
 
   <!-- message -->
-  <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+  <div class="Grid Grid--full Grid--gutters u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
@@ -832,7 +832,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <div class="Grid Grid--full forFullResponsiveGrid">
+      <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
