--- a/html/navigation/index.html
+++ b/html/navigation/index.html
@@ -279,7 +279,7 @@
           <div class="element">
             <a class="no-hover-effect" href="/navigation/V1/">
               <div class="">
-                <div class="elementCard float cardBorder shadowBoxLt">
+                <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
                   <img src="../ProjectImages/Cover_NavigationV1.svg" alt="vickywang.me/navigation/V1">
                   <div class="element">
                     <h3 class="arrCard"><strong>Version 1</strong></h3>
@@ -295,7 +295,7 @@
           <div class="element">
             <a class="no-hover-effect" href="/navigation/V2/">
               <div class="">
-                <div class="elementCard float cardBorder shadowBoxLt">
+                <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
                   <img src="../ProjectImages/Cover_NavigationV2.svg" alt="vickywang.me/navigation/V2">
                   <div class="element">
                     <h3 class="arrCard"><strong>Version 2</strong></h3>
@@ -310,7 +310,7 @@
         <div class="Grid-cell">
           <div class="element">
             <a class="no-hover-effect" href="/navigation/V3/">
-              <div class="elementCard float cardBorder shadowBoxLt">
+              <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
                 <img src="../ProjectImages/Cover_NavigationV3.svg" alt="vickywang.me/navigation/V3">
                 <div class="element">
                   <h3 class="arrCard"><strong>Version 3</strong></h3>
@@ -455,7 +455,7 @@
 
 
     <div class="blankHS"></div>
-    <div class="Grid Grid--full forFullResponsiveGrid">
+    <div class="Grid Grid--full Grid--gutters">
       <div class="Grid-cell">
         <div class=" footerBorder">
           <div class="element">
