--- a/html/seer/index.html
+++ b/html/seer/index.html
@@ -304,7 +304,7 @@
 
   <div class="blankHS"></div>
   <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--1of1 Grid--full forFullResponsiveGrid Grid--nested">
+    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--gutters Grid--nested">
       <div class="Grid-cell">
         <div class="element">
           <div class="Grid">
@@ -375,7 +375,7 @@
 
       <div class="blankHS"></div>
       <div class="wrapper">
-        <div class="Grid Grid--gutters Grid--1of1 Grid--full forFullResponsiveGrid Grid--nested">
+        <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--gutters Grid--nested">
           <div class="Grid-cell">
             <div class="element">
               <div class="Grid">
@@ -414,7 +414,7 @@
             <!-- Arrow -->
             <div class="wrapper">
 
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element">
                     <div class="elementInner cardSEER">
@@ -628,7 +628,7 @@
             <div class="blankHXS"></div>
 
             <div class="wrapper">
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
 
                 <div class="Grid-cell">
                   <div class="element">
@@ -639,7 +639,7 @@
                 </div>
 
               </div>
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element">
                     <div class="element">
@@ -696,7 +696,7 @@
           <!-- Arrow -->
           <div class="blankHS"></div>
           <div class="wrapper">
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element">
 
@@ -773,7 +773,7 @@
             <div class="wrapper">
 
 
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element ">
                     <div class="element cardSEER">
@@ -788,7 +788,7 @@
               </div>
               <div class="blankHXS"></div>
 
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element ">
                     <div class="element cardSEER">
@@ -804,7 +804,7 @@
               </div>
               <div class="blankHXS"></div>
 
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element ">
                     <div class="element cardSEER">
@@ -820,7 +820,7 @@
 
               <div class="blankHXS"></div>
 
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element ">
                     <div class="element cardSEER">
@@ -835,7 +835,7 @@
 
               <div class="blankHXS"></div>
 
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element ">
                     <div class="element cardSEER">
@@ -874,7 +874,7 @@
             <!-- Arrow -->
             <div class="blankHS"></div>
             <div class="wrapper">
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element">
 
@@ -898,7 +898,7 @@
             <!-- Arrow -->
             <div class="blankHS"></div>
             <div class="wrapper">
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element">
 
@@ -1163,7 +1163,7 @@
             <!-- Arrow -->
             <div class="blankHS"></div>
             <div class="wrapper">
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <h2 class="colorSEER">Key flow and customer journey</h2>
                 </div>
@@ -1179,7 +1179,7 @@
 
             <div class="blankHM"></div>
             <div class="wrapper">
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <h2 class="colorSEER">Sketch the basic flow</h2>
                 </div>
@@ -1197,7 +1197,7 @@
 
           <div class="wrapper">
 
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <h2 class="colorSEER">Based on the sketch update the flow</h2>
               </div>
@@ -1210,7 +1210,7 @@
             </div>
             <div class="blankHM"></div>
 
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <h2 class="colorSEER">Testing the basic functions, ensure the attainment of the
                   primary objective</h2>
@@ -1228,7 +1228,7 @@
 
 
             <div class="blankHS"></div>
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element colorSEERBG SEER">
                   <h4>
@@ -1261,13 +1261,13 @@
             <div class="blankHS"></div>
 
             <div class="wrapper">
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <h2 class="colorSEER">Key flow update</h2>
                 </div>
               </div>
               <div class="blankHS"></div>
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element">
                     <img class="modal-target " src="diagram_FlowV2.svg" alt="Placeholder">
@@ -1279,7 +1279,7 @@
             <div class="blankHM"></div>
             <div class="wrapper">
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter ">
+              <div class="Grid Grid--full Grid--gutters u-textCenter ">
                 <div class="Grid-cell">
                   <h2 class="colorSEER">Flow overview</h2>
                 </div>
@@ -1296,7 +1296,7 @@
           <div class="blankHM"></div>
           <div class="wrapper">
 
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <h2 class="colorSEER">Testing</h2>
               </div>
@@ -1308,7 +1308,7 @@
               </div>
             </div>
             <div class="blankHS"></div>
-            <div class="Grid Grid--full forFullResponsiveGrid ">
+            <div class="Grid Grid--full Grid--gutters ">
               <div class="Grid-cell">
                 <div class="element colorSEERBG leftVerLine SEER">
                   <h4>
@@ -1349,13 +1349,13 @@
           </div>
           <!-- Arrow -->
           <div class="wrapper">
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <h2 class="colorSEER">Final Flow Chart </h2>
               </div>
             </div>
             <div class="blankHS"></div>
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element">
                   <img class="" src="diagram_finalFlow.svg" alt="Final flow">
@@ -1363,7 +1363,7 @@
                 </div>
               </div>
             </div>
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element">
@@ -1381,7 +1381,7 @@
           <div class="blankHS"></div>
           <!-- testing -->
           <div class="wrapper">
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element colorSEERBG leftVerLine SEER">
                   <h4>
@@ -1446,7 +1446,7 @@
           <div class="BGseer2_1">
             <div class="blankHS"></div>
             <div class="wrapper">
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element">
                     <h1><strong class="colorSEERDark">Powerful machine learning with Reddit
@@ -1459,7 +1459,7 @@
                 </div>
               </div>
               <div class="blankHS"></div>
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element">
                     <img src="Hi-fi_diagram.svg" alt="How it works">
@@ -1471,7 +1471,7 @@
           <div class="BGseer0">
             <div class="blankHXS"></div>
             <div class="wrapper">
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element">
                     <h1><strong class="colorSEERDark">See trend for keywords</strong>
@@ -1483,7 +1483,7 @@
                 </div>
               </div>
 
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element">
                     <img src="Hi-fi_diagram_linegraph.svg" alt="How it works">
@@ -1493,7 +1493,7 @@
             </div>
 
             <div class="wrapper">
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element">
                     <h1><strong class="colorSEERDark">See performance by communities</strong>
@@ -1505,7 +1505,7 @@
                 </div>
               </div>
 
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element">
                     <img src="Hi-fi_diagram_piechart.svg" alt="How it works">
@@ -1515,7 +1515,7 @@
             </div>
 
             <div class="wrapper">
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element">
                     <h1><strong class="colorSEERDark">View raw post data</strong>
@@ -1526,7 +1526,7 @@
                 </div>
               </div>
 
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element">
                     <img src="Hi-fi_diagram_table.svg" alt="How it works">
@@ -1625,7 +1625,7 @@
             <div class="wrapper">
 
               <div class="blankHS"></div>
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element">
                     <img class="modal-target" src="Hi-fi_landing_short.svg" alt="Wireframes">
@@ -1633,7 +1633,7 @@
                 </div>
               </div>
               <div class="blankHS"></div>
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element">
                     <img class="modal-target" src="Hi-fi_main.svg" alt="Wireframes">
@@ -1642,7 +1642,7 @@
                 </div>
               </div>
               <div class="blankHS"></div>
-              <div class="Grid Grid--full forFullResponsiveGrid">
+              <div class="Grid Grid--full Grid--gutters">
                 <div class="Grid-cell">
                   <div class="element">
                     <img class="modal-target" src="Hi-fi_main_1.svg" alt="Wireframes">
@@ -1677,7 +1677,7 @@
   </div>
   <!-- Arrow -->
   <div class="blankHM"></div>
-  <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+  <div class="Grid Grid--full Grid--gutters u-textCenter">
     <ul class="tags" id="TagsCloud">
 
       <li class="tag"><span class="box"> User-centered Design</span></li>
@@ -1729,7 +1729,7 @@
   </div>
   <!-- message -->
   <div class="blankHL"></div>
-  <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+  <div class="Grid Grid--full Grid--gutters u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
@@ -1885,7 +1885,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <div class="Grid Grid--full forFullResponsiveGrid">
+      <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
