--- a/index.html
+++ b/index.html
@@ -411,7 +411,9 @@
                   <div class="element">
                     <h5>Booking | Business-Facing</h5>
                     <h3 class="arrCard" data-aos="fade-up"><strong>B2B SaaS - Onboarding & Subscription</strong></h3>
-                    <h4>Focused on simplifying and refining the onboarding and subscription processes, we aim to facilitate a smooth transition for our B2B clients. This approach is geared towards improving engagement and adoption rates, ultimately driving business growth and customer satisfaction.</h4>
+                    <h4>Focused on simplifying and refining the onboarding and subscription processes, we aim to
+                      facilitate a smooth transition for our B2B clients. This approach is geared towards improving
+                      engagement and adoption rates, ultimately driving business growth and customer satisfaction.</h4>
                   </div>
                 </div>
               </div>
