--- a/html/navigation/V1/index.html
+++ b/html/navigation/V1/index.html
@@ -120,7 +120,7 @@
 
             <div class="dropdown-content">
               <a href="/glorify/">
-                <div class="cardBorder GLORIFY">
+                <div class="cardBorder borderRadiusS GLORIFY">
                   <img src="../../ProjectImages/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
                     <h5 class="colorBlack">GLORIFY | Daily worship</h5>
@@ -128,7 +128,7 @@
                 </div>
               </a>
               <a href="/appointa/">
-                <div class="cardBorder APPOINTA">
+                <div class="cardBorder borderRadiusS APPOINTA">
                   <img src="../../ProjectImages/Cover_APPOINTA.png" alt="APPOINTA">
                   <div class="element">
                     <h5 class="colorBlack">APPOINTA | Scheduling</h5>
@@ -136,7 +136,7 @@
                 </div>
               </a>
               <a href="/seer/">
-                <div class="cardBorder SEER ">
+                <div class="cardBorder borderRadiusS SEER ">
                   <img src="../../ProjectImages/Cover_SEER.png" alt="SEER">
                   <div class="element">
                     <h5 class="colorBlack">SEER | Business performance</h5>
@@ -144,7 +144,7 @@
                 </div>
               </a>
               <a href="/design_system/">
-                <div class="cardBorder ">
+                <div class="cardBorder borderRadiusS ">
                   <img src="../../ProjectImages/Cover_portfolioWeb.svg" alt="Design System">
                   <div class="element">
                     <h5 class="colorBlack">Design System | vickywang.me</h5>
@@ -382,7 +382,7 @@
           <!-- Img -->
           <div class="wrapper">
 
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                     alt="New User">
@@ -446,7 +446,7 @@
 
           <div class="wrapper">
 
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element ">
                   <div class="element cardAPPOINTA">
@@ -461,7 +461,7 @@
                 </div>
               </div>
             </div>
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element ">
                   <div class="element cardAPPOINTA">
@@ -489,7 +489,7 @@
               </div>
             </div>
 
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element ">
                   <div class="element cardAPPOINTA">
@@ -504,7 +504,7 @@
                 </div>
               </div>
             </div>
-            <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element ">
                   <div class="element cardAPPOINTA">
@@ -544,7 +544,7 @@
           <!-- Img -->
           <div class="wrapper">
 
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                     alt="New User">
@@ -567,7 +567,7 @@
           <!-- Img -->
           <div class="wrapper">
 
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                     alt="New User">
@@ -577,7 +577,7 @@
             <!-- Img -->
             <!-- Img -->
 
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                     alt="New User">
@@ -587,7 +587,7 @@
             <!-- Img -->
             <!-- Img -->
 
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                     alt="New User">
@@ -660,7 +660,7 @@
           <!-- Img -->
           <div class="wrapper">
 
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                     alt="New User">
@@ -689,7 +689,7 @@
             <!-- Img -->
             <div class="wrapper">
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -880,7 +880,7 @@
           <!-- Img -->
           <div class="wrapper">
 
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                     alt="New User">
@@ -901,7 +901,7 @@
           <!-- Img -->
           <div class="wrapper">
 
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid Grid--full Grid--gutters u-textCenter">
               <div class="Grid-cell">
                 <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                     alt="New User">
@@ -924,7 +924,7 @@
           <!-- Img -->
           <div class="wrapper">
 
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter ">
+            <div class="Grid Grid--full Grid--gutters u-textCenter ">
               <div class="Grid-cell">
                 <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                     alt="New User">
@@ -934,7 +934,7 @@
             <!-- Img -->
             <!-- Img -->
 
-            <div class="Grid Grid--full forFullResponsiveGrid u-textCenter ">
+            <div class="Grid Grid--full Grid--gutters u-textCenter ">
               <div class="Grid-cell">
                 <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                     alt="New User">
@@ -949,7 +949,7 @@
 
 
           <div class="blankHS"></div>
-          <div class="Grid Grid--full forFullResponsiveGrid ">
+          <div class="Grid Grid--full Grid--gutters ">
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
@@ -1033,7 +1033,7 @@
             <!-- Img -->
             <div class="wrapper">
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -1056,14 +1056,14 @@
             <!-- Img -->
             <div class="wrapper">
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
                   </div>
                 </div>
               </div>
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -1089,7 +1089,7 @@
             <!-- Img -->
             <div class="wrapper">
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -1126,7 +1126,7 @@
           <div class="blankHXS"></div>
 
 
-          <div class="Grid Grid--full forFullResponsiveGrid">
+          <div class="Grid Grid--full Grid--gutters">
             <div class="Grid-cell">
               <div class="element">
                 <div class="element GreyBg100 leftVerLine ">
@@ -1319,7 +1319,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <div class="Grid Grid--full forFullResponsiveGrid">
+      <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
