--- a/html/navigation/V2/index.html
+++ b/html/navigation/V2/index.html
@@ -115,7 +115,7 @@
 
             <div class="dropdown-content">
               <a href="/glorify/">
-                <div class="cardBorder GLORIFY">
+                <div class="cardBorder borderRadiusS GLORIFY">
                   <img src="../../ProjectImages/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
                     <h5 class="colorBlack">GLORIFY | Daily worship</h5>
@@ -123,7 +123,7 @@
                 </div>
               </a>
               <a href="/appointa/">
-                <div class="cardBorder APPOINTA">
+                <div class="cardBorder borderRadiusS APPOINTA">
                   <img src="../../ProjectImages/Cover_APPOINTA.png" alt="APPOINTA">
                   <div class="element">
                     <h5 class="colorBlack">APPOINTA | Scheduling</h5>
@@ -131,7 +131,7 @@
                 </div>
               </a>
               <a href="/seer/">
-                <div class="cardBorder SEER ">
+                <div class="cardBorder borderRadiusS SEER ">
                   <img src="../../ProjectImages/Cover_SEER.png" alt="SEER">
                   <div class="element">
                     <h5 class="colorBlack">SEER | Business performance</h5>
@@ -139,7 +139,7 @@
                 </div>
               </a>
               <a href="/design_system/">
-                <div class="cardBorder ">
+                <div class="cardBorder borderRadiusS ">
                   <img src="../../ProjectImages/Cover_portfolioWeb.svg" alt="Design System">
                   <div class="element">
                     <h5 class="colorBlack">Design System | vickywang.me</h5>
@@ -326,7 +326,7 @@
               <!-- Arrow -->
               <!-- Img -->
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -387,7 +387,7 @@
               <!-- Arrow -->
               <!-- Img -->
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -414,7 +414,7 @@
               <!-- Arrow -->
               <!-- Img -->
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -464,7 +464,7 @@
                   </div>
                 </div>
                 <!-- Arrow -->
-                <div class="Grid Grid--full forFullResponsiveGrid">
+                <div class="Grid Grid--full Grid--gutters">
                   <div class="Grid-cell">
                     <div class="">
                       <div class="element GreyBg100 leftVerLine ">
@@ -826,7 +826,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <div class="Grid Grid--full forFullResponsiveGrid">
+      <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
