--- a/html/navigation/V3/index.html
+++ b/html/navigation/V3/index.html
@@ -159,7 +159,7 @@
 
             <div class="dropdown-content">
               <a href="/glorify/">
-                <div class="cardBorder GLORIFY">
+                <div class="cardBorder borderRadiusS GLORIFY">
                   <img src="../../ProjectImages/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
                     <h5 class="colorBlack">GLORIFY | Daily worship</h5>
@@ -167,7 +167,7 @@
                 </div>
               </a>
               <a href="/appointa/">
-                <div class="cardBorder APPOINTA">
+                <div class="cardBorder borderRadiusS APPOINTA">
                   <img src="../../ProjectImages/Cover_APPOINTA.png" alt="APPOINTA">
                   <div class="element">
                     <h5 class="colorBlack">APPOINTA | Scheduling</h5>
@@ -175,7 +175,7 @@
                 </div>
               </a>
               <a href="/seer/">
-                <div class="cardBorder SEER ">
+                <div class="cardBorder borderRadiusS SEER ">
                   <img src="../../ProjectImages/Cover_SEER.png" alt="SEER">
                   <div class="element">
                     <h5 class="colorBlack">SEER | Business performance</h5>
@@ -183,7 +183,7 @@
                 </div>
               </a>
               <a href="/design_system/">
-                <div class="cardBorder ">
+                <div class="cardBorder borderRadiusS ">
                   <img src="../../ProjectImages/Cover_portfolioWeb.svg" alt="Design System">
                   <div class="element">
                     <h5 class="colorBlack">Design System | vickywang.me</h5>
@@ -364,7 +364,7 @@
               </div>
               <!-- Arrow -->
               <!-- Img -->
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -415,7 +415,7 @@
               <!-- Arrow -->
               <!-- Img -->
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -436,7 +436,7 @@
               <!-- Arrow -->
               <!-- Img -->
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -446,7 +446,7 @@
               <!-- Img -->
               <!-- Img -->
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -456,7 +456,7 @@
               <!-- Img -->
               <!-- Img -->
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -487,7 +487,7 @@
               <!-- Arrow -->
               <!-- Img -->
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -497,7 +497,7 @@
               <!-- Img -->
               <!-- Img -->
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -516,7 +516,7 @@
               <!-- Arrow -->
               <!-- Img -->
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -526,7 +526,7 @@
               <!-- Img -->
               <!-- Img -->
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -690,7 +690,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <div class="Grid Grid--full forFullResponsiveGrid">
+      <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
